# tablerone

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  python-test.yaml
src/tablerone/: __init__.py  exceptions.py  table.py  table_options.py  table_style.py
tests/: test_aaa.py  test_args.py
